# 2024-01-learning-langchain

./: .gitignore  README.md  pyproject.toml
src/: 1-commandline-prompt.py  3-pandas-integration.py  4-chat.py  5-query-website.py  7-speaking-chatbot.py  8-load-csv.py  basic_llm.py  planet_generator.py
src/6-document-chatbot/: 6-document-chatbot.py  prompts.py
src/classes/: SpeechSynthesis.py  chatbot.py  document_loader.py  document_qa_chatbot.py  webscrapers.py
src/classes/audio_processing/: AudioRecorder.py  SpeechSynthesis.py  SpeechToText.py  readme.md
src/classes/chatbots/: SpeakingChatbot.py  chatbot.py
src/data/: example_csv.csv
src/document_chatbot/: 6-document-chatbot.py  6-speaking-chatbot.py  prompts.py
