[tool.poetry]
name = "2024-01-langchain-learning"
version = "0.1.0"
description = ""
authors = ["hiroji"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
black = "^23.12.1"
pylint = "^3.0.3"
langchain-experimental = "^0.0.49"
tabulate = "^0.9.0"
html2text = "^2024.2.26"
tqdm = "^4.66.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
