[tool.poetry]
name = "2024-01-langchain-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
bs4 = "^0.0.2"
html2text = "^2024.2.26"
tqdm = "^4.66.2"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
